--- a/cl2020.html
+++ b/cl2020.html
@@ -3,7 +3,7 @@
   <title>リモートセンシング</title>
 </head>
 <body>
- 　<h2>衛星の種類<h2>
+ 　<h2>衛星の種類</h2>
 　地球の周りを飛ぶ人工衛星はその目的によって大きく分けて三種類になり、そこからさらに用途によって分類される。
  <br>
  1．「情報」を伝える:通信技術　通信衛星,放送衛星
@@ -53,16 +53,16 @@
     農業市場情報システムを通じて世界へ配信されている。日本では灌漑設備が整った環境で育てられている米ですが、東南アジアでは雨水に頼った天水栽培も多く
     見られる。その年の雨の降り方によって作付面積は大きく変わるそのような地域ではリモートセンシングデータを活用し、水稲の作付地や面積を推定することができる。
   </p>
-   <h2>まとめ<h2>
+   <h2>まとめ</h2>
    　今回紹介したリモートセンシングはほんの一部に過ぎないが、これだけでも世界中で幅広く使用されていることがわかる。利便性は高いが、発展途上国ではこのシ
    ステムがあまり関与できていないということや観測能力の技術的改善など、課題はまだあるのでそれらをどう対処していくかが肝になってくるだろう。そしてAIな
    どが発達してきている現代ではデータの解析速度の上昇や観測ネットワークの拡大などの発展も見込まれている。
    
    <h2>参考文献</h2>
-  　<a href="https://www.restec.or.jp/knowledge/sensing"></a>
+  　<a href="https://www.restec.or.jp/knowledge/sensing">https://www.restec.or.jp/knowledge/sensing</a>
   <br>
-   <a href="https://www.restec.or.jp/solution/service/service-disaster"></a>
+   <a href="https://www.restec.or.jp/solution/service/service-disaster"https://www.restec.or.jp/solution/service/service-disaster></a>
   <br>
-   <a href="http://tenbou.nies.go.jp/science/description/detail.php?id=86"></a> 
+   <a href="http://tenbou.nies.go.jp/science/description/detail.php?id=86">http://tenbou.nies.go.jp/science/description/detail.php?id=86</a> 
    </body>
    </html>
