--- a/cl2020.html
+++ b/cl2020.html
@@ -24,11 +24,9 @@
  <br>
  ・だいち:陸域を観測する人工衛星で、太陽光を使う光学センサと電波を使うレーダーを駆使して地表を観測する。
  <br>
- ・だいち二号:だいちの後継機として稼働している。電波を使った観測に特化した衛星で継続的な観測データは地表変動や社会インフラの監視から農林業への応用など
- 　幅広い分野で活躍している。
+ ・だいち二号:だいちの後継機として稼働している。電波を使った観測に特化した衛星で継続的な観測データは地表変動や社会インフラの監視から農林業への応用など幅広い分野で活躍している。
  <br>
- ・しずく:地球規模での気候の変化や水が循環する仕組みを調べることができる。様々な国の観測衛星と同じ軌道上で同時に観測を行う国際的な観測プロジェクトの一
- 　員。
+ ・しずく:地球規模での気候の変化や水が循環する仕組みを調べることができる。様々な国の観測衛星と同じ軌道上で同時に観測を行う国際的な観測プロジェクトの一員。
  <br>
  ・ひまわり:主に日本を中心とした地域の雲などを調べる衛星。
  <br>
