--- a/cl2020.html
+++ b/cl2020.html
@@ -26,13 +26,13 @@
  <br>
  ・だいち二号:電波を使った観測に特化した衛星で継続的な観測データは地表変動や社会インフラの監視から農林業への応用など幅広い分野で活躍している。
  <br>
- ・しずく:地球規模での気候の変化や水が循環する仕組みを調べることができる。様々な国の観測衛星と同じ軌道上で観測を行う国際的な観測プロジェクトの一員。
+ ・しずく:地球規模の気候の変化や水が循環する仕組みを調べることができる。様々な国の観測衛星と同じ軌道上で観測を行う国際的観測プロジェクトの一員。
  <br>
  ・ひまわり:主に日本を中心とした地域の雲などを調べる衛星。
  <br>
  ・いぶき:二酸化炭素など地球上の温室効果ガスを調べる衛星。
  <br>
- ・Landsat-8:米国NASAの地球観測衛星で1972年の一号機打ち上げ以降、長期にわたり運用されている。マルチスペクトル画像や熱赤外画像の取得と保存を目的としている。
+ ・Landsat-8:米国NASAの地球観測衛星で1972年以降、長期にわたり運用されている。マルチスペクトル画像や熱赤外画像の取得と保存を目的としている。
   <h2>リモートセンシングデータの応用</h2>
  <p>
  　リモートセンシングデータは様々な箇所で活躍している。今回はその中のを三つ紹介させていただく。
