--- a/cl2020.html
+++ b/cl2020.html
@@ -67,10 +67,10 @@
    どが発達してきている現代ではデータの解析速度の上昇や観測ネットワークの拡大などの発展も見込まれている。
    <hr>
    <h2>参考文献</h2>
-   [1]<a href="https://www.restec.or.jp/knowledge/sensing">https://www.restec.or.jp/knowledge/sensing</a>
+   [1]<a href="https://www.restec.or.jp/knowledge/sensing">リモートセンシングとは？</a>
   <br>
-   [2]<a href="https://www.restec.or.jp/solution/service/service-disaster">https://www.restec.or.jp/solution/service/service-disaster</a>
+   [2]<a href="https://www.restec.or.jp/solution/service/service-disaster">リモートセンシングと防災</a>
   <br>
-   [3]<a href="http://tenbou.nies.go.jp/science/description/detail.php?id=86">http://tenbou.nies.go.jp/science/description/detail.php?id=86</a> 
+   [3]<a href="http://tenbou.nies.go.jp/science/description/detail.php?id=86">リモートセンシング―環境技術解説</a> 
    </body>
    </html>
